# cos701

./: .gitignore  Cargo.toml
py/: plot_neighbors.py  plot_neighbors_alt.py
report/assignment4/: first_neighbors.tex  second_neighbors.tex  sites_first_second.txt
src/: deranged.rs  main.rs  util.rs
src/assignment/: assignment1.rs  assignment2.rs  assignment3.rs  assignment4.rs  assignment5.rs  assignment6.rs  assignment7.rs  mod.rs  project_d.rs
src/data/: delaunay.rs  lattice.rs  line.rs  mod.rs  neighbors.rs  nn_map.rs  point.rs  points_in_grid.rs  random_vec.rs  voronoi.rs
src/plot/: mod.rs  plot.rs
src/rand/: boxmuller.rs  clt_gaussian.rs  exponential.rs  inverse_transform.rs  mod.rs  points_in_grid.rs  random_vec.rs  uniform.rs
src/rng/: boxmuller.rs  clt_gaussian.rs  exponential.rs  inverse_transform.rs  mod.rs  uniform.rs
templates/: neighbors.tex
