[package]
name = "cos_701"
version = "0.1.0"
authors = ["Ben Stringer <ben.stringer@usm.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.8.3"
plotters = "^0.3.0"
num = "^0.3.1"
conv = "^0.3.3"
log = "^0.4.14"
simple_logger = "^1.11.0"
delaunator = "0.2.0"
voronoi = "0.1.4"
ordered-float = "^0.5.0"